--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="MyCargoRoute's Privacy Policy outlines how we collect, use, and protect your personal information. Your privacy is our priority." />
     <meta name="keywords" content="" />
-    <link rel="shortcut icon" href="ftco-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,700|Oswald:400,700" rel="stylesheet">
 
@@ -56,7 +59,10 @@
 
 
             <div class="site-logo">
-              <a href="/" class="text-black"><span class="text-primary">MyCargoRoute</a>
+              <a href="/" class="text-black">
+                <image src="/logo.png" style="height: 40px; width: auto" />
+                <span class="text-primary" style="font-size: 14px;text-transform: none;">MyCargoRoute</span>
+              </a>
             </div>
 
             <div class="col-12">
