--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
 
         } else if(status == "delivered") {
           statusText = "Order Delivered"
-          statusDesc = `Your shipment order ${orderNo} has been delivered. Than you for choosing us.`
+          statusDesc = `Your shipment order ${orderNo} has been delivered. Thank you for choosing us.`
           step = 2
 
         } else {
